tests/baselines/reference/exportAssignmentConstrainedGenericType.errors.txt
foo_0.ts(2,2): error TS2564: Property 'test' has no initializer and is not definitely assigned in the constructor.
foo_1.ts(2,17): error TS2345: Argument of type 'boolean' is not assignable to parameter of type '{ a: string; b: number; }'.


==== foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
    var x = new foo(true); // Should error
                    ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type '{ a: string; b: number; }'.
    var y = new foo({a: "test", b: 42}); // Should be OK
    var z: number = y.test.b;
==== foo_0.ts (1 errors) ====
    class Foo<T extends {a: string; b:number;}>{
    	test: T;
    	~~~~
!!! error TS2564: Property 'test' has no initializer and is not definitely assigned in the constructor.
    	constructor(x: T){}
    }
    
    export = Foo;
    